results/SVCOMP/0-shot/log-AlarmOutputs-2024_03_18_22_29_56.txt
import java.util.Random;

final class Verifier {
  //@ ensures \result >= Integer.MIN_VALUE && \result <= Integer.MAX_VALUE;
  public static int nondetInt() {
    return new Random().nextInt();
  }
}

public class AlarmOutputs {
  //@ public model int isAudioDisabled;
  //@ public model int notificationMessage;
  //@ public model int audioNotificationCommand;
  //@ public model int highestLevelAlarm;
  //@ public model int logMessageId;

  //@ ensures isAudioDisabled >= Integer.MIN_VALUE && isAudioDisabled <= Integer.MAX_VALUE;
  //@ ensures notificationMessage >= Integer.MIN_VALUE && notificationMessage <= Integer.MAX_VALUE;
  //@ ensures audioNotificationCommand >= Integer.MIN_VALUE && audioNotificationCommand <= Integer.MAX_VALUE;
  //@ ensures highestLevelAlarm >= Integer.MIN_VALUE && highestLevelAlarm <= Integer.MAX_VALUE;
  //@ ensures logMessageId >= Integer.MIN_VALUE && logMessageId <= Integer.MAX_VALUE;
  public AlarmOutputs() {
    isAudioDisabled = Verifier.nondetInt();
    notificationMessage = Verifier.nondetInt();
    audioNotificationCommand = Verifier.nondetInt();
    highestLevelAlarm = Verifier.nondetInt();
    logMessageId = Verifier.nondetInt();
  }
}
/home/max/Documents/JMLGPT/tmp/AlarmOutputs.java:23: error: cannot find symbol
    isAudioDisabled = Verifier.nondetInt();
    ^
  symbol:   variable isAudioDisabled
  location: class AlarmOutputs
/home/max/Documents/JMLGPT/tmp/AlarmOutputs.java:24: error: cannot find symbol
    notificationMessage = Verifier.nondetInt();
    ^
  symbol:   variable notificationMessage
  location: class AlarmOutputs
/home/max/Documents/JMLGPT/tmp/AlarmOutputs.java:25: error: cannot find symbol
    audioNotificationCommand = Verifier.nondetInt();
    ^
  symbol:   variable audioNotificationCommand
  location: class AlarmOutputs
/home/max/Documents/JMLGPT/tmp/AlarmOutputs.java:26: error: cannot find symbol
    highestLevelAlarm = Verifier.nondetInt();
    ^
  symbol:   variable highestLevelAlarm
  location: class AlarmOutputs
/home/max/Documents/JMLGPT/tmp/AlarmOutputs.java:27: error: cannot find symbol
    logMessageId = Verifier.nondetInt();
    ^
  symbol:   variable logMessageId
  location: class AlarmOutputs
5 errors

